<resources>
    <string name="app_name">Bistrokart</string>
    <string name="continue_guest">Continue as Guest!!</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome">Welcome</string>
    <string name="please_sign_in_to_your_account">Please sign in to your account</string>
    <string name="please_sign_up_to_your_account">Please sign up to your account</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="email_hint">Enter email</string>
    <string name="email_id">Email id</string>
    <string name="outlet_name">Outlet name</string>
    <string name="address">Address</string>
    <string name="address_hint">8502 Preston Rd, Inglewood, Main Rd, Bapunagar, Ahmedabad</string>
    <string name="city">City</string>
    <string name="anagram">Anagram</string>
    <string name="pin_code">Pin code</string>
    <string name="hint_pin_code">600 - 787</string>
    <string name="pan_number">Pan number</string>
    <string name="pan_number_hint">CHF25260LK5</string>
    <string name="upload_pan_card">Upload PAN Card (optional)</string>
    <string name="supported_file">Supported file types png. jpeg &amp; pdf</string>
    <string name="please_provide_a_document">Please provide a document</string>
    <string name="gstin">GSTIN</string>
    <string name="fssai">FSSAI</string>
    <string name="upload_gstin_certificate">Upload GSTIN Certificate</string>
    <string name="upload_fssai_certificate">Upload FSSAI Certificate</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_sign_in_otp">Enter Sign In OTP</string>
    <string name="please_enter_the_6_digit_code_sent_to">Please Enter The 6 Digit Code Sent To</string>
    <string name="hint_otp_number">0</string>
    <string name="wait_on_00_32">Wait on 00:32</string>
    <string name="continue_btn">Continue</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="grocery_delivery">Grocery Delivery</string>
    <string name="services">Services</string>
    <string name="search_grocery">Search Grocery</string>
    <string name="category">Category</string>
    <string name="view_all">View All</string>
    <string name="deal_of_the_day">Deal of the Day</string>
    <string name="help_support">Help &amp; Support</string>

    <string name="hint_phone_number">hint_phone_number</string>
    <string name="PhonePeID">PhonePe.getPackageSignature()</string>


    <!--api call text-->
    <string name="server_error">Please try again</string>
    <string name="msg_try_again">Please try again</string>
    <string name="msg_no_network">Please check internet connection</string>
    <string name="w">wromg</string>

    <!-- add image dialog-->
    <string name="lbl_camera">Take Photo</string>
    <string name="lbl_gallery">Choose from Gallery</string>
    <string name="select_picture">Select Picture</string>
    <string name="loading">Loading....</string>

    <string name="money">₹</string>
    <string name="per_unit">/Per Unit</string>
    <string name="resend_otp">Resend OTP?</string>

    <!--otp dialog-->
    <string name="otp_has_been_sent_to_your_phone">OTP has been sent to your phone</string>
    <string name="otp_verification">OTP Verification</string>

</resources>