<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_module.activity.SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBack"
            style="@style/backButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/back_arrow"
            android:layout_marginStart="@dimen/_14sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:paddingEnd="@dimen/_2sdp"
            android:paddingStart="0dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imgBack"
            app:layout_constraintStart_toStartOf="@id/imgBack"
            app:layout_constraintEnd_toEndOf="@+id/txtWelcome"
            android:text="@string/sign_in"
            android:textSize="@dimen/_24sdp"
            android:fontFamily="@font/gelion_bold"
            android:textColor="@color/loginBtnColor"
            android:layout_marginTop="@dimen/_24sdp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtWelcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txtSignIn"
            app:layout_constraintStart_toStartOf="@id/txtSignIn"
            app:layout_constraintEnd_toEndOf="@id/txtDescription"
            android:text="@string/welcome"
            android:textSize="@dimen/_16sdp"
            android:fontFamily="@font/gelion_medium"
            android:textColor="@color/signUpBtnColor"
            android:layout_marginTop="@dimen/_10sdp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txtWelcome"
            app:layout_constraintStart_toStartOf="@id/txtWelcome"
            app:layout_constraintEnd_toEndOf="@id/edtPhoneNumber"
            android:text="@string/please_sign_in_to_your_account"
            android:fontFamily="@font/gelion_light"
            android:layout_marginTop="@dimen/_1sdp"
            android:textColor="@color/signUpBtnColor"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txtDescription"
            app:layout_constraintStart_toStartOf="@id/txtDescription"
            app:layout_constraintEnd_toEndOf="@id/edtPhoneNumber"
            android:text="@string/enter_phone_number"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/gelion_light"
            android:layout_marginTop="@dimen/_30sdp"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_14sdp"
            android:background="@drawable/back_click_shape"
            app:layout_constraintTop_toBottomOf="@id/txtPhoneNumber"
            app:layout_constraintStart_toStartOf="@id/txtPhoneNumber"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_14sdp"
            android:imeOptions="actionDone"
            android:layout_marginTop="@dimen/_6sdp"
            android:fontFamily="@font/gelion_light"
            android:hint="@string/enter_phone_number"
            android:inputType="phone"
            android:maxLength="10"
            android:paddingHorizontal="@dimen/_14sdp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/btn_shape"
            android:text="@string/login"
            android:textAllCaps="false"
            android:paddingVertical="@dimen/_12sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_24sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>