<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_module.activity.OTPActivity">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgBack"
                style="@style/backButton"
                android:paddingVertical="@dimen/_8sdp"
                android:paddingStart="0dp"
                android:paddingEnd="@dimen/_2sdp"
                android:src="@drawable/back_arrow" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:fontFamily="@font/gelion_bold"
                android:text="@string/enter_sign_in_otp"
                android:textColor="@color/loginBtnColor"
                android:textSize="@dimen/_24sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/gelion_medium"
                android:text="@string/welcome"
                android:textColor="@color/signUpBtnColor"
                android:textSize="@dimen/_16sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1sdp"
                android:fontFamily="@font/gelion_light"
                android:text="@string/please_enter_the_6_digit_code_sent_to"
                android:textColor="@color/signUpBtnColor" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtOTPNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1sdp"
                android:fontFamily="@font/gelion_light"
                android:text="+00 99999 88888"
                android:textColor="@color/signUpBtnColor" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:fontFamily="@font/gelion_light"
                android:text="@string/enter_otp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

        <!-- OTP Field -->
        <LinearLayout
            android:id="@+id/nameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:orientation="horizontal"
            android:weightSum="4">

            <include
                android:id="@+id/layoutOtpView"
                layout="@layout/otp_view" />


        </LinearLayout>

        <TextView
            android:id="@+id/tvTiming"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="Wait For 00:59 second"
            android:textColor="@color/green" />

        <TextView
            android:id="@+id/otpResent"
            android:textSize="16sp"
            android:fontFamily="@font/gelion_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="Resend OTP"
            android:visibility="visible"
            android:paddingVertical="@dimen/_10sdp"
            android:textColor="@color/green" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTimerOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_26sdp"
        android:fontFamily="@font/gelion_light"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/mainLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/_14sdp"
        android:text="@string/wait_on_00_32"
        android:textColor="#FF0000" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_14sdp"
        android:background="@drawable/btn_shape"
        android:paddingVertical="@dimen/_12sdp"
        android:text="@string/continue_btn"
        android:layout_marginBottom="@dimen/_20sdp"
        app:layout_constraintBottom_toTopOf="@id/rvLayout"
        android:textAllCaps="false" />

    <RelativeLayout
        android:id="@+id/rvLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtNotReceiveCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gelion_light"
            android:text="If you did't receive a code? "
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gelion_medium"
            android:gravity="center"
            android:layout_toRightOf="@id/txtNotReceiveCode"
            android:text="Resend"
            android:textColor="@color/signUpBtnColor"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>