<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_image"
    tools:context=".main_module.fragment.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_14sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!--<androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgNavbar"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:src="@drawable/navbar_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    android:visibility="invisible"
                    android:clickable="false"
                    app:layout_constraintTop_toTopOf="parent" />

-->
                <!--        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/imgCart"
                            android:layout_width="@dimen/_24sdp"
                            android:layout_height="@dimen/_24sdp"
                            android:src="@drawable/add_to_cart_icon"
                            app:layout_constraintBottom_toBottomOf="@id/imgNavbar"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:visibility="gone"
                            app:layout_constraintTop_toTopOf="@id/imgNavbar" />
        -->
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_28sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/gelion_bold"
                    android:maxLines="2"
                    android:text="NAME"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/gelion_regular"
                    android:maxLines="1"
                    android:text=""
                    android:maxLength="20"
                    android:textColor="@color/multiDarkGray"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintStart_toStartOf="@+id/tvName"
                    app:layout_constraintTop_toBottomOf="@id/tvName" />

                <!-- <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/txtServices"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/gelion_light"
                     android:text="@string/services"
                     android:textColor="@color/green"
                     android:textSize="@dimen/_26sdp"
                     app:layout_constraintTop_toBottomOf="@id/txtGroceryDelivery" />
 -->

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivNotification"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginEnd="@dimen/_14sdp"
                    android:src="@drawable/ic_bell"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/tvName"
                    app:layout_constraintTop_toTopOf="@+id/tvName"
                    app:layout_goneMarginTop="@dimen/_20sdp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/searchCard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_2sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_2sdp"
                    app:cardCornerRadius="@dimen/_8sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvAddress">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="visible">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_gravity="center"
                            android:adjustViewBounds="true"
                            android:padding="@dimen/_12sdp"
                            android:src="@drawable/search_icon" />


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:editable="false"
                            android:fontFamily="@font/gelion_light"
                            android:hint="@string/search_grocery"
                            android:paddingVertical="@dimen/_14sdp"
                            android:textCursorDrawable="@null"
                            app:searchHintIcon="@color/darkGray" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                app:layout_constraintTop_toBottomOf="@+id/constraintOne">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtCategory"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_14sdp"
                    android:fontFamily="@font/gelion_bold"
                    android:includeFontPadding="false"
                    android:text="@string/category"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sdp"
                    app:layout_constraintEnd_toStartOf="@+id/txtViewAll"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtViewAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_14sdp"
                    android:fontFamily="@font/gelion_bold"
                    android:includeFontPadding="false"
                    android:paddingHorizontal="@dimen/_6sdp"
                    android:paddingTop="@dimen/_6sdp"
                    android:text="@string/view_all"
                    android:textColor="@color/green"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintBottom_toBottomOf="@id/txtCategory"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/txtCategory" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCategoryList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:nestedScrollingEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtCategory" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtDealOfTheDay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:fontFamily="@font/gelion_bold"
                    android:includeFontPadding="false"
                    android:text="@string/deal_of_the_day"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rvCategoryList" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvDealOfDay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:nestedScrollingEnabled="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtDealOfTheDay" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>